--- a/meeee/style.css
+++ b/meeee/style.css
@@ -53,4 +53,8 @@ section#content { margin:0 auto; width:960px; padding:20px 0px; }
 
 h1 { font-size:48px; font-weight:bold; color:black; text-align:center; }
 h2 { font-size:36px; font-weight:bold; color:black; text-align:center; }
-p { padding-bottom:10px; }
+p { padding-bottom:10px; text-align:center;}
+img{ height:25%; width:25%; display: block;
+    margin-left: auto;
+    margin-right: auto;}
+
