--- a/llama-love/style.css
+++ b/llama-love/style.css
@@ -53,4 +53,21 @@ table {
 
 /* END RESET */
 
+article{float:left;
+		width:500px;
+		margin:15px;}
+h1{font-family:helvetica;
+	font-size: 26px;
+	font-weight:bold;
+	}
+h2{color:gray;
+   font-family:helvetica;
+   font-size:14px;
+}
+img{float:left;
+	width:250px;
+	height:200px;
+	margin-right:10px;
+	margin-bottom:10px;}
+
 
