--- a/yum/style.css
+++ b/yum/style.css
@@ -53,4 +53,28 @@ table {
 
 /* END RESET */
 
-h1{color:red;}
+h1{text-align:center;
+	font-size:30px;
+	font-family:Cheltenham;
+	margin-top:30px;
+
+   }
+h2{text-align:center;
+   font-family:Cheltenham;
+	margin-top:5px;}
+ol{float:right;
+	margin-top:50px;
+	padding-right:380px;
+	font-family:baskerville;
+	width:300px;}
+ul{float:left;
+	margin-left:100px;
+	margin-top:50px;
+	font-family:baskerville;
+	padding-left:330px;}
+footer{position:absolute;
+		top:400px;
+		text-align:center;
+		left:0;
+		right:0;}
+
