--- a/cats-vs-dogs/reset.css
+++ b/cats-vs-dogs/reset.css
@@ -73,16 +73,21 @@ table {
 html[xmlns] .clearfix { display: block; }
 * html .clearfix { height: 1%; }
 
-li {color:#000000;
+li {
 	display: inline-block;
  	list-style: none;
 	font-style:Baskerville;
 	font-weight:bold;
-	font-size:25px;
+	font-size:30px;
 	float:left;
-	padding:10px;
-	}
+	padding:15px;
 
+	}
+ul{position:absolute;
+	left:18%;
+	border-top:5px solid black;
+	border-bottom:5px solid black;}
+ a{color:black;}
 
 h1{font-size:25px;
 	font-family:Baskerville;
@@ -92,23 +97,24 @@ h2{font-size:25px;
 	font-weight:Bold;}
 p{font-family:Baskerville;
   font-size:15px;}
+hr{border:3px solid black;}
 
-#site-header h1 a {position:relative;
-					margin:auto;
-					display:block;  
- 					width:300px; 
- 					height:110px;  
- 					background:url(images/dogvscat-logo.gif) no-repeat top left; 
- 					text-indent:-9999px;
- 					margin-top:40px;
- 				    }
+#site-header{position:relative;
+			margin:auto;
+			display:block;  
+ 			width:300px; 
+ 			height:110px;  
+ 			background:url(images/dogvscat-logo.gif) no-repeat center; 
+ 			text-indent:-9999px;
+ 			margin-top:20px;
+ 			margin-bottom:20px;
+ 			}
 
- 
 article{clear:both;
 	    float:left;
 		width:350px;
 		height:350px;
-		}
+		padding-top:50px;}
 
 
 footer{clear:both;}
