--- a/cats-vs-dogs/reset.css
+++ b/cats-vs-dogs/reset.css
@@ -85,8 +85,7 @@ li {
 	}
 ul{position:absolute;
 	left:18%;
-	border-top:5px solid black;
-	border-bottom:5px solid black;}
+	padding-bottom:5px;}
  a{color:black;}
 
 h1{font-size:25px;
@@ -118,6 +117,6 @@ article{clear:both;
 
 
 footer{clear:both;}
-
+#second-line{margin-top:10px;}
 
 
