--- a/yum/style.css
+++ b/yum/style.css
@@ -56,25 +56,30 @@ table {
 h1{text-align:center;
 	font-size:30px;
 	font-family:Cheltenham;
+	font-weight:bold;
 	margin-top:30px;
 
    }
 h2{text-align:center;
    font-family:Cheltenham;
+   font-weight:bold;
 	margin-top:5px;}
 ol{float:right;
 	margin-top:50px;
 	padding-right:380px;
 	font-family:baskerville;
-	width:300px;}
+	width:300px;
+	list-style-type:decimal;
+	line-height:1.3em;}
 ul{float:left;
 	margin-left:100px;
 	margin-top:50px;
 	font-family:baskerville;
 	padding-left:330px;}
 footer{position:absolute;
-		top:400px;
+		top:470px;
 		text-align:center;
 		left:0;
 		right:0;}
+li{margin-bottom:6pt;}
 
