--- a/llama-love/style.css
+++ b/llama-love/style.css
@@ -53,8 +53,8 @@ table {
 
 /* END RESET */
 article{float:left;
-		width:500px;
-		margin:15px;}
+		width:470px;
+		margin:20px;}
 h1{font-family:helvetica;
 	font-size: 26px;
 	font-weight:bold;
@@ -62,6 +62,8 @@ h1{font-family:helvetica;
 h2{color:gray;
    font-family:helvetica;
    font-size:14px;
+   margin-bottom:20px;
+   margin-top:10px;
 }
 img{float:left;
 	width:250px;
