--- a/cats-vs-dogs/reset.css
+++ b/cats-vs-dogs/reset.css
@@ -85,7 +85,7 @@ li {
 	}
 ul{position:absolute;
 	left:21.8%;
-	bottom:67.5%;
+	bottom:68%;
 	padding-bottom:5px;
 	}
  a{color:black;}
@@ -129,14 +129,14 @@ hr{border:3px solid black;
 			margin-bottom:25px;}
 footer{clear:right;
 		}
-.link1{list-style:none;
-		float:left;
-		width:150px;
-	
-	text-decoration:none;}
+.link1{ position:absolute;
+		width:260px;
+		left:19.5%;
+		bottom:0.05%;
+	    text-decoration:none;}
 .link2{position:absolute;
 		bottom:0.1%;
-		left:70%;
+		left:66.5%;
 		}
 
 
