--- a/robots/style.css
+++ b/robots/style.css
@@ -50,3 +50,40 @@ table {
 	border-spacing: 0;
 }
 
+h1 a{display:block;	
+     text-indent:-9999px;    
+     position:relative;
+  	 width:300px; height:80px;
+  	 background:url(images/logo.png) no-repeat left top;
+	 }
+h2	{font-family:helvetica;
+	 font-size:15px;
+	 text-transform:uppercase;
+	 font-weight:bold;}
+#top-nav{position:absolute;
+		 right:20%;
+		 top:10px;}
+#main-menu li{float:left;
+			display:block;
+			padding:15px;}
+#page h1{font-size:25px;
+		 font-family:helvetica;
+		 text-transform:uppercase;
+		 font-weight:bold;
+		}
+#page{
+	  clear:both;
+	  float:left;
+	  width:35%;
+	  margin:15px;}
+#sidebar{float:right;
+		 width:20%;
+		 margin-right:300px;}
+#site-footer{clear:both;
+			 width:200px;}
+#footer-follow{float:right;
+				width:100px;}
+#footer-follow li {float:right;
+				  display:block;
+				  margin:10px;
+				  padding:10px;}
