--- a/cats-vs-dogs/reset.css
+++ b/cats-vs-dogs/reset.css
@@ -85,8 +85,7 @@ li {
 	}
 ul{position:absolute;
 	left:21.8%;
-	bottom:68%;
-	padding-bottom:5px;
+	bottom:72%;
 	}
  a{color:black;}
 
@@ -103,13 +102,14 @@ h2{font-size:25px;
 p{font-family:Baskerville;
   font-size:15px;}
 hr{border:3px solid black;
-	margin-bottom:50px;}
+	margin-bottom:50px;
+	width:100;}
 
-
+body{width:100%;}
 #site-header{position:relative;
 			margin:auto;
 			display:block;  
- 			width:300px; 
+ 			width:100%; 
  			height:110px;  
  			background:url(images/dogvscat-logo.gif) no-repeat center; 
  			text-indent:-9999px;
@@ -118,7 +118,13 @@ hr{border:3px solid black;
  			margin-bottom:20px;
  			}
 
-
+#top-menu{border-top:5px solid black;	
+		  border-bottom:5px solid black;
+		  padding:15px;
+		  margin:15px;
+		  background-color:white;
+		  height:20px;
+		  width:110%;}
 .article1{float:left;
 		   width:390px;
 			margin-left:280px;
@@ -132,12 +138,13 @@ footer{clear:right;
 .link1{ position:absolute;
 		width:260px;
 		left:19.5%;
-		bottom:0.05%;
+		bottom:12%;
 	    text-decoration:none;}
 .link2{position:absolute;
-		bottom:0.1%;
+		bottom:12%;
 		left:66.5%;
 		}
 
-
+#site-footer{border-top:5px solid black;
+			width:110%;}
 
