--- a/final/workpage.css
+++ b/final/workpage.css
@@ -50,8 +50,7 @@ table {
 	border-spacing: 0;
 }
 
-body{max-width:960px;
-	 margin:0 auto;}
+
 
 h1 a{display:block;	
      text-indent:-9999px;    
@@ -63,7 +62,9 @@ h1 a{display:block;
 	 }
 
 #website{position:relative;
-		 height:900px;}
+		 height:900px;
+		 max-width:960px;
+	 margin:0 auto;}
 
 
 #top-nav{position:absolute;
@@ -85,7 +86,7 @@ h1 a{display:block;
 	   top:180px;
 	   left:600px;}
 #opposites{position:absolute;
-	  top:500px;}
+	  top:460px;}
 li{font-family:helvetica;
 	letter-spacing:0.01em;
 	width:50px;
