--- a/final/artworkpage.css
+++ b/final/artworkpage.css
@@ -71,6 +71,9 @@ p{font-family:whitney;}
 
 img{width:500px;}
 
+h1{font-family:helvetica;
+   font-weight: bold;}
+
 #website{position:relative;
 		 height:900px;
 		 max-width:960px;
@@ -87,8 +90,10 @@ img{width:500px;}
 .circle{padding:5px;
 		margin-right:10%;
 		}
-#photos{position:relative;}
-.image1{position:absolute;
-		top:200px;}
-
-#information{position:absolute;}
+#photos{position:relative;
+		left:80px;
+		top:150px;}
+#information{position:absolute;
+			 top:265px;
+			 left:620px;
+			 width:500px;}
