--- a/final/artworkpage.css
+++ b/final/artworkpage.css
@@ -56,7 +56,8 @@ h1 a{display:block;
      text-indent:-9999px;    
      position:relative;
   	 width:400px; height:120px;
-  	 top:90px;
+  	top:70px;
+  	 left:70px;
   	 background:url(images/logo_title.png) no-repeat left top;
   	 margin-right:5%;
 	 }
