--- a/final/style.css
+++ b/final/style.css
@@ -57,8 +57,8 @@ h1 a{display:block;
      text-indent:-9999px;    
      position:relative;
   	 width:400px; height:120px;
-  	 left:5%;
-  	 top:90px;
+  	 top:70px;
+  	 left:70px;
   	 background:url(images/logo_title.png) no-repeat left top;
   	 margin-right:5%;
 	 }
@@ -75,6 +75,14 @@ h1 a{display:block;
 #profile{float:left;}
 #aboutme{float:right;
 		 width:300px;}
+#slideshow{position:relative;
+			top:50px;
+			left:120px;}
+#shot{position:absolute;
+	  top:100px;
+	  left:;
+	  width:900px;
+	  height:500px;}
 
 
 
