--- a/final/style.css
+++ b/final/style.css
@@ -70,7 +70,7 @@ h1 a{display:block;
 		top: 90px;
 		left: 544px;
 		height: 30px;
-		width: 100%;
+		width:600px;
 		text-align: center;}
 #profile{float:left;}
 #aboutme{float:right;
@@ -84,6 +84,44 @@ h1 a{display:block;
 	  width:900px;
 	  height:500px;}
 
+#pictures{position:relative;
+			   left:130px;}
+
+#bass{position:absolute;
+	  top:180px;}
+#lemons{position:absolute;
+	   top:180px;
+	   left:300px;}
+#miyavi{position:absolute;
+	   top:180px;
+	   left:600px;}
+#opposites{position:absolute;
+	  top:460px;}
+#climate{position:absolute;
+	  top:460px;
+	  left:600px;}
+#book{position:absolute;
+	   top:460px;
+	   left:300px;}
+#content{position:relative;
+				top:180px;
+				left:130px;}
+
+#me{position:relative;
+	 width:300px;
+	 }
+.aboutme{position:absolute;
+		width:500px;
+		left:380px;
+		top:20px;}
+#photos{position:relative;
+		left:80px;
+		top:150px;}
+#information{position:absolute;
+			 top:265px;
+			 left:620px;
+			 width:500px;}
+
 
 
 
@@ -92,6 +130,9 @@ li{font-family:helvetica;
 	width:50px;
 	float:left;
 	}
+p{font-family:whitney;}
+
+#contacts{padding-top:10px;}
 
 
 .circle{padding:5px;
