--- a/cats-vs-dogs/reset.css
+++ b/cats-vs-dogs/reset.css
@@ -73,80 +73,66 @@ table {
 html[xmlns] .clearfix { display: block; }
 * html .clearfix { height: 1%; }
 
-body{width:960px;}
+body{width:100%;
+	margin:0 auto;
+	}
 
-#navigation{text-align:center;
-			}
-.menu{display:block;
-	  list-style:none;
-	  font-weight:bold;
-	  font-size:30px;
-	  }
-ul{ float:left;
-		width:50%;}
+#site-header h1 a{position:relative;
+				  margin:auto;
+				  display:block;  
+ 				  width:100%; 
+ 				  height:110px;  
+ 				  background:url(images/dogvscat-logo.gif) no-repeat center; 
+ 				  text-indent:-9999px;
+ 				  padding-bottom:5%;}
+ nav{margin:0 auto;
+ 	 text-align:center;
+ 	 border-top:3px solid black;
+ 	 border-bottom:3px solid black;}
+ section{margin:0 auto;
+ 		max-width:60%;}
 
 
+ li{display:inline-block;
+ 	padding-right:2%;
+ 	padding-top:1%;
+ 	padding-bottom:1%;
+ 	font-weight:bold;
+ 	font-size:1.7em;}
 
-
-
- a{color:black;}
-
-h1{font-size:25px;
-	font-family:Baskerville;
-	font-weight:bold;
-	margin-top:5px;
-	margin-bottom:5px;}
-h2{font-size:25px;
-   font-family:Baskerville;
-	font-weight:Bold;
-	margin-top:5px;
-	margin-bottom:5px;}
-p{font-family:Baskerville;
-  font-size:15px;}
-hr{border:3px solid black;
-	margin-bottom:50px;
-	width:100;}
-
-body{width:100%;}
-#site-header{position:relative;
-			margin:auto;
-			display:block;  
- 			width:100%; 
- 			height:110px;  
- 			background:url(images/dogvscat-logo.gif) no-repeat center; 
- 			text-indent:-9999px;
- 			padding-top:10px;
- 			margin-top:30px;
- 			margin-bottom:20px;
- 			}
-
-#top-menu{border-top:5px solid black;	
-		  border-bottom:5px solid black;
-		  padding:15px;
-		  margin:15px;
-		  background-color:white;
-		  height:20px;
-		  width:110%;}
-.article1{float:left;
-		   width:390px;
-			margin-left:280px;
-			margin-bottom:25px;}
-.article2{float:right;
-			width:400px;
-			margin-right:308px;
-			margin-bottom:25px;}
-footer{clear:right;
+ article{float:left;
+ 		 width:45%;
+ 		 margin:2%;
+ 		 padding-top:2%;
+ 		 padding-bottom:2%;}
+ article h1{font-weight:bold;
+ 			font-size:1.7em;
+ 			padding-bottom:.7em;}
+ article h2{font-weight:bold;
+ 			font-size:1.7em;
+ 			padding-bottom:.7em;}
+ article p{line-height:1.8em;}
+footer{clear:both;
+		margin:0 auto;
+		border-top:3px solid black;
+		width:60%;}
+#link1{float:left;
+	
+	}
+#link2{float:right;
 		}
-.link1{ position:absolute;
-		width:260px;
-		left:19.5%;
-		bottom:12%;
-	    text-decoration:none;}
-.link2{position:absolute;
-		bottom:12%;
-		left:66.5%;
-		}
+@media screen and (max-width:900px){
+	article{float:none; width:100%;}
+}
 
-#site-footer{border-top:5px solid black;
-			width:110%;}
+@media screen and (max-width:900px){
+	footer{font-size:0.9em;}
+}
+
+@media screen and (max-width:700px){
+	footer{font-size:0.5em;}
+}
+
+
+
 
