--- a/final/style.css
+++ b/final/style.css
@@ -51,26 +51,25 @@ table {
 }
 
 body{max-width:960px;
-	 margin:0 auto;}
+	 margin: 0 auto;}
 
 h1 a{display:block;	
      text-indent:-9999px;    
      position:relative;
   	 width:400px; height:120px;
   	 top:70px;
-  	 left:70px;
+  	 right:50px;
   	 background:url(images/logo_title.png) no-repeat left top;
-  	 margin-right:5%;
 	 }
 
 #website{position:relative;
-		 }
+		 margin:0 auto;}
 
 #top-nav{position:absolute;
 		top: 90px;
-		left: 544px;
+		left: 450px;
 		height: 30px;
-		width:450px;
+		width:500px;
 		text-align: center;}
 #profile{float:left;}
 #aboutme{float:right;
@@ -85,24 +84,97 @@ h1 a{display:block;
 	  height:500px;}
 
 #pictures{position:relative;
-			   left:130px;}
+			   }
 
 #bass{position:absolute;
-	  top:180px;}
+	  top:180px;
+		filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscalerayscale");
+filter: gray;
+-webkit-filter: grayscale(100%);
+-moz-transition: all 0.5s ease-in-out;
+-webkit-transition: all 0.5s ease-in-out;
+transition: all 0.5s ease-in-out;}
+
+#bass:hover {
+filter: none;
+-webkit-filter: grayscale(0%);
+}
+
+
 #lemons{position:absolute;
 	   top:180px;
-	   left:300px;}
+	   left:300px;
+		filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscalerayscale");
+filter: gray;
+-webkit-filter: grayscale(100%);
+-moz-transition: all 0.5s ease-in-out;
+-webkit-transition: all 0.5s ease-in-out;
+transition: all 0.5s ease-in-out;}
+
+#lemons:hover {
+filter: none;
+-webkit-filter: grayscale(0%);
+}
+
 #miyavi{position:absolute;
 	   top:180px;
-	   left:600px;}
+	   left:600px;
+		filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscalerayscale");
+filter: gray;
+-webkit-filter: grayscale(100%);
+-moz-transition: all 0.5s ease-in-out;
+-webkit-transition: all 0.5s ease-in-out;
+transition: all 0.5s ease-in-out;}
+
+#miyavi:hover {
+filter: none;
+-webkit-filter: grayscale(0%);
+}
+
 #opposites{position:absolute;
-	  top:460px;}
+	  top:460px;
+		filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscalerayscale");
+filter: gray;
+-webkit-filter: grayscale(100%);
+-moz-transition: all 0.5s ease-in-out;
+-webkit-transition: all 0.5s ease-in-out;
+transition: all 0.5s ease-in-out;}
+
+#opposites:hover {
+filter: none;
+-webkit-filter: grayscale(0%);
+}
+
 #climate{position:absolute;
 	  top:460px;
-	  left:600px;}
+	  left:600px;
+		filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscalerayscale");
+filter: gray;
+-webkit-filter: grayscale(100%);
+-moz-transition: all 0.5s ease-in-out;
+-webkit-transition: all 0.5s ease-in-out;
+transition: all 0.5s ease-in-out;}
+
+#climate:hover {
+filter: none;
+-webkit-filter: grayscale(0%);
+}
+
 #book{position:absolute;
 	   top:460px;
-	   left:300px;}
+	   left:300px;
+		filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscalerayscale");
+filter: gray;
+-webkit-filter: grayscale(100%);
+-moz-transition: all 0.5s ease-in-out;
+-webkit-transition: all 0.5s ease-in-out;
+transition: all 0.5s ease-in-out;}
+
+#book:hover {
+filter: none;
+-webkit-filter: grayscale(0%);
+}
+
 #content{position:relative;
 				top:180px;
 				left:130px;}
@@ -138,122 +210,43 @@ p{font-family:whitney;}
 #contacts{padding-top:10px;}
 
 
-.circle{padding:5px;
-		margin-right:30px;
-		}
+.circle{width:95px;
+height:95px;
+border-radius:250px;
+font-size:0.8em;
+color:#fff;
+-webkit-transition: 1s;
+line-height:95px;
+text-align:center;
+background:#000;
+margin-right:56px;
+}
+
+.circle a{color:white;
+  list-style:none;}
+
+
+.circle:hover{background:blue;}
+
+.circle2{width:95px;
+height:95px;
+border-radius:250px;
+font-size:0.8em;
+color:#fff;
+-webkit-transition: 1s;
+line-height:95px;
+text-align:center;
+background:#000;
+margin-right:56px;
+}
+
+.circle2 a{color:white;
+  list-style:none;}
+
+
+.circle2:hover{background:red;}
+
+h1{font-size:15px;}
+
 
 img{clear:both;}
-
-/*
- * jQuery Nivo Slider v3.2
- * http://nivo.dev7studios.com
- *
- * Copyright 2012, Dev7studios
- * Free to use and abuse under the MIT license.
- * http://www.opensource.org/licenses/mit-license.php
- */
- 
-/* The Nivo Slider styles */
-.nivoSlider {
-	position:relative;
-	width:100%;
-	height:auto;
-	overflow: hidden;
-}
-.nivoSlider img {
-	position:absolute;
-	top:0px;
-	left:0px;
-	max-width: none;
-}
-.nivo-main-image {
-	display: block !important;
-	position: relative !important; 
-	width: 100% !important;
-}
-
-/* If an image is wrapped in a link */
-.nivoSlider a.nivo-imageLink {
-	position:absolute;
-	top:0px;
-	left:0px;
-	width:100%;
-	height:100%;
-	border:0;
-	padding:0;
-	margin:0;
-	z-index:6;
-	display:none;
-	background:white; 
-	filter:alpha(opacity=0); 
-	opacity:0;
-}
-/* The slices and boxes in the Slider */
-.nivo-slice {
-	display:block;
-	position:absolute;
-	z-index:5;
-	height:100%;
-	top:0;
-}
-.nivo-box {
-	display:block;
-	position:absolute;
-	z-index:5;
-	overflow:hidden;
-}
-.nivo-box img { display:block; }
-
-/* Caption styles */
-.nivo-caption {
-	position:absolute;
-	left:0px;
-	bottom:0px;
-	background:#000;
-	color:#fff;
-	width:100%;
-	z-index:8;
-	padding: 5px 10px;
-	opacity: 0.8;
-	overflow: hidden;
-	display: none;
-	-moz-opacity: 0.8;
-	filter:alpha(opacity=8);
-	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
-	box-sizing: border-box;         /* Opera/IE 8+ */
-}
-.nivo-caption p {
-	padding:5px;
-	margin:0;
-}
-.nivo-caption a {
-	display:inline !important;
-}
-.nivo-html-caption {
-    display:none;
-}
-/* Direction nav styles (e.g. Next & Prev) */
-.nivo-directionNav a {
-	position:absolute;
-	top:45%;
-	z-index:9;
-	cursor:pointer;
-}
-.nivo-prevNav {
-	left:0px;
-}
-.nivo-nextNav {
-	right:0px;
-}
-/* Control nav styles (e.g. 1,2,3...) */
-.nivo-controlNav {
-	text-align:center;
-	padding: 15px 0;
-}
-.nivo-controlNav a {
-	cursor:pointer;
-}
-.nivo-controlNav a.active {
-	font-weight:bold;
-}
