--- a/final/style.css
+++ b/final/style.css
@@ -76,10 +76,9 @@ h1 a{display:block;
 		 width:300px;}
 #slideshow{position:relative;
 			top:50px;
-			left:120px;}
+			}
 #shot{position:absolute;
 	  top:100px;
-	  left:;
 	  width:900px;
 	  height:500px;}
 
