--- a/final/style.css
+++ b/final/style.css
@@ -176,7 +176,7 @@ filter: none;
 
 #content{position:relative;
 				top:180px;
-				left:130px;}
+				}
 
 #me{position:relative;
 	 width:300px;
@@ -225,25 +225,10 @@ margin-right:56px;
   list-style:none;}
 
 
-.circle:hover{background:blue;}
-
-.circle2{width:95px;
-height:95px;
-border-radius:250px;
-font-size:0.8em;
-color:#fff;
--webkit-transition: 1s;
-line-height:95px;
-text-align:center;
-background:#000;
-margin-right:56px;
-}
-
-.circle2 a{color:white;
-  list-style:none;}
+.circle:hover{background:#009999;}
 
 
-.circle2:hover{background:red;}
+
 
 h1{font-size:15px;}
 
